Changed script, style.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Paveluk98" />
     <title>Temperature Converter</title>
     <link rel="stylesheet" href="/style.css" />
-    <script src="/index.js" defer></script>
+    <script src="/script.js" defer></script>
   </head>
   <body>
     <div class="container">
